--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "description": "WIP - nothing to see here",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "fuse-shared-library-darwin": "^1.0.0",
+    "napi-macros": "^1.8.2"
+  },
   "devDependencies": {},
   "repository": {
     "type": "git",
